@@ -1,4 +1,4 @@
-GNU C Library NEWS -- history of user-visible changes.  2009-4-10
+GNU C Library NEWS -- history of user-visible changes.  2009-4-13
 Copyright (C) 1992-2008, 2009 Free Software Foundation, Inc.
 See the end for copying conditions.
 
@@ -37,7 +37,7 @@ Version 2.10
 
 * New locales: nan_TW@latin, ks_IN
 
-* Faster strlen, strchr, strchrnul, memchr, and rawmemchr for x86-64.
+* Faster strlen, strchr, strchrnul, strrchr, memchr, and rawmemchr for x86-64.
   Implemented by Ulrich Drepper.
 
 * Extended printf hook support.  It is possible to use user-defined types
